--- a/FrontEnd/pages/FrameworksPage/frameworks.css
+++ b/FrontEnd/pages/FrameworksPage/frameworks.css
@@ -23,4 +23,48 @@
     margin-bottom: 1rem;
 }
 
+.main__questions{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 2.5rem; 
+    row-gap: 1rem;
+    column-gap: 1rem;
+}
+
+.main__questions .main__article:nth-of-type(n){
+    border-radius: 10px;
+    box-shadow: 0 0 15px 0 rgba(150, 150, 150,0.3);
+    padding: 1rem;
+    transform: scale(0);
+}
+
+.main__questions .main__article:nth-of-type(1){
+    animation: popUp 1s ease-in-out .5s forwards;
+}
+
+.main__questions .main__article:nth-of-type(2){
+    animation: popUp 1s ease-in-out 1.5s forwards;
+}
+
+.main__questions .main__article:nth-of-type(3){
+    animation: popUp 1s ease-in-out 2.3s forwards;
+}
+
 /************************* End main styling *************************/
+
+
+
+/************************ Animations *************************/
+
+@keyframes popUp{
+    0%{
+        transform: scale(0);
+    }70%{
+        transform: scale(1.05);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+
+/************************ End Animations *************************/
