--- a/FrontEnd/pages/FrameworksPage/frameworks.css
+++ b/FrontEnd/pages/FrameworksPage/frameworks.css
@@ -25,7 +25,7 @@
 
 .main__questions{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     margin-top: 2.5rem; 
     row-gap: 1rem;
     column-gap: 1rem;
