--- a/FrontEnd/pages/FrameworksPage/frameworks.css
+++ b/FrontEnd/pages/FrameworksPage/frameworks.css
@@ -1,7 +1,9 @@
 /************************* Main styling *************************/
 
 .main{
-    margin: 0 auto;
+    grid-area: main;
+    justify-self: center;
+    margin-bottom: 2rem;
     max-width: 1150px;
     width: 90%;
 }
@@ -12,23 +14,18 @@
 }
 
 .main__body{
-    padding: 2rem;
-}
-
-.main__question{
-    margin-bottom: 1rem;
+    padding: 1rem;
 }
 
 .main__copy{
-    margin-bottom: 1rem;
+    margin-bottom: 2.5rem;
 }
 
 .main__questions{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    margin-top: 2.5rem; 
-    row-gap: 1rem;
-    column-gap: 1rem;
+    grid-template-columns: 1fr;
+    font-size: .9rem;
+    row-gap: 1.5rem;
 }
 
 .main__questions .main__article:nth-of-type(n){
@@ -50,6 +47,10 @@
     animation: popUp 1s ease-in-out 2.3s forwards;
 }
 
+.main__question{
+    margin-bottom: 1rem;
+}
+
 /************************* End main styling *************************/
 
 
@@ -68,3 +69,25 @@
 }
 
 /************************ End Animations *************************/
+
+
+
+/************************ Media Queries **************************/
+
+@media screen and ( min-width: 720px ){
+    .main__questions{
+        grid-template-columns: 1fr 1fr;
+        font-size: .9rem;
+        column-gap:1.5rem
+    }
+}
+
+@media screen and ( min-width: 1280px ){
+    .main__questions{
+        grid-template-columns: 1fr 1fr 1fr;
+        font-size: .9rem;
+
+    }
+}
+
+/************************ End Media Queries **************************/
