--- a/FrontEnd/pages/LanguagesPage/languages.css
+++ b/FrontEnd/pages/LanguagesPage/languages.css
@@ -6,22 +6,10 @@
     max-width: 1400px;
     width: 90%;
 }
+
 .main__header{
     margin-bottom: 3rem;
     text-align: center;
-}
-
-.main__article{
-    margin-bottom: 2.75rem;
-}
-
-.main__aside{
-    margin: 2rem;
-}
-
-.main__image{
-    border-radius: 15px;
-    width: 100%;
 }
 
 /************************ End main styling ************************/
@@ -30,40 +18,45 @@
 
 /************************ Article styling ************************/
 
-.main .card:nth-of-type(2) .card__figure{
-    margin-left: 2rem;
-
-}
-
 .main .card:nth-of-type(3) .card__image{
     border-radius: 15px;
-}
+} 
 
 .card{
     border-radius: 10px;
     box-shadow: 0 0 20px 0 rgba(120, 120, 120, .2);
-    display: flex;
-    margin: 0 auto;
     margin-bottom: 3rem;
-    padding: 2rem;
+    padding: 1rem;
     max-width: 1150px;
 }
 
 .card__figure{
-    margin-right: 2rem;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+.main .card:nth-of-type(2) .card__figure{
+    margin-bottom: 0;
+    margin-top: 1rem;
 }
 
 .card__image{
-    width: 300px;
+    width: 150px;
 }
 
 .card__title{
-    margin-bottom: 1.5rem;
+    font-size: 1.25rem;
+    margin-bottom: 1rem;
 }
 
 .card__copy{
-    line-height: 1.5rem;
+    font-size: .9rem;
+    line-height: 1.3rem;
     margin-bottom: 1.5rem;
+}
+
+.card__actions{
+    text-align: center;
 }
 
 .card__more{
@@ -83,3 +76,47 @@
 }
 
 /************************ End article styling ************************/
+
+
+
+/************************ Media Queries **************************/
+
+@media screen and (min-width: 720px) {
+    
+    .card{
+        align-items: stretch;
+        display: flex;
+        padding: 2rem;
+    }
+
+    .card__figure{
+        margin-bottom: 0;
+        margin-right: 2rem;
+    }
+    
+    .main .card:nth-of-type(2) .card__figure{
+        margin-left: 2rem;
+        margin-right: 0;
+        margin-top: 0rem;
+    }
+
+    .card__actions{
+        text-align: start;
+    }
+
+}
+
+@media screen and ( min-width: 1020px) {
+    
+    .card{
+        align-items: stretch;
+        padding: 2rem;
+    }
+
+    .card__image{
+        width: 300px;
+    }
+
+}
+
+/************************ End Media Queries **************************/
