--- a/FrontEnd/pages/indexAssets/index.css
+++ b/FrontEnd/pages/indexAssets/index.css
@@ -1,42 +1,79 @@
 /************************ Main styling ************************/
 
-.main-content{
+.main{
     grid-area: main;
     justify-self: center;
     max-width: 1150px;
     width: 90%;
 }
-.main-content__header{
+.main__header{
     margin-bottom: 2rem;
     text-align: center;
 }
 
-.main-content__introduction{
+.main__introduction{
     font-size: 1.2rem;
     margin-bottom: 1rem;
 }
 
-.main-content__article{
+.main__article{
     margin-bottom: 2.75rem;
 }
 
-.main-content__aside{
+.main__aside{
     display: flex;
     flex-direction: column-reverse;
 }
 
-.main-content__figure{
+.main__figure{
     margin-bottom: 1.5rem;
 }
 
-.main-content__image{
+.main__image{
     border-radius: 15px;
     width: 100%;
 }
 
-.main-content__caption{
+.main__caption{
     font-size: .9rem;
 }
+
+.main__figure-blockquote{
+    color: goldenrod;
+    flex-direction: column;
+    font-size: .8rem;
+    margin-bottom: 2rem;
+    text-align: end;
+}
+
+.main__quote{
+    display: inline-block;
+    margin-bottom: .75rem;
+}
+
+.main__quote::before{
+    content: '\201C';
+}
+
+.main__quote::after{
+    content: '\201D';
+}
+
+.main__quotee{
+    display: inline-block;
+    text-align: center;
+}
+
+.main__quote-btn{
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.main__quote-btn:focus{
+    outline: 2px solid goldenrod;
+}
+
 
 /************************* End main styling *************************/
 
@@ -47,15 +84,15 @@
 
 @media screen and ( min-width: 780px ){
     
-    .main-content__aside{
+    .main__aside{
         flex-direction: row-reverse;
     }
 
-    .main-content__figure{
+    .main__figure{
         margin-right: 1rem;
     }
     
-    .main-content__figure:nth-child(1){
+    .main__figure:nth-child(1){
         margin-right: 0;
     }
 
