--- a/FrontEnd/common/css/common.css
+++ b/FrontEnd/common/css/common.css
@@ -8,7 +8,9 @@
     font-family: DancingScript;
 }
 
-
+:root{
+    --main-color: #1c1e21;
+}
 
 *{
     box-sizing: border-box;
@@ -21,11 +23,12 @@ body{
     grid-template:
     "nav" auto
     "main" auto
+    "fact" auto
     "aside" auto
     "footer" auto / 1fr;
     display: grid;
     font-family: Roboto;
-    min-height: 100vh;
+    height: 100vh;
 }
 
 
@@ -33,16 +36,22 @@ body{
 /************************* Navbar *************************/
 
 .header-nav{
-    background-color: #1c1e21;
+    background-color: var(--main-color);
     grid-area: nav;
     margin-bottom: 2rem;
 }
 
 .nav{
-    max-width: 1400px;
     margin: 0 auto;
-    padding: 2rem 0;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
     width: 90%;
+}
+
+.nav__sub{
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
 }
 
 .nav__logo{
@@ -51,27 +60,49 @@ body{
     font-size: 1.5rem;
     font-weight: 600;
     letter-spacing: 3px;
-    margin-bottom: 2rem;
-    text-align: center;
 }
 
 .nav__list{
-    display: flex;
-    justify-content: space-between;
     list-style-type: none;
+    height: 0;
+    overflow-y:hidden;
+    padding-top: 1rem;
+    transition: height .5s;
+}
+
+.nav__item{
+    height: 3rem;
+    padding: 1rem 0 1rem 0;
 }
 
 .nav__link{
     color: #fff;
     letter-spacing:1px;
     text-decoration: none;
+    font-size: 1rem;
 }
+
+.nav__burger{
+    cursor: pointer;
+    width: 25px;
+}
+
+.nav__line:last-child{
+    margin-bottom: 0;
+}
+
+.nav__line{
+    background-color: #fff;
+    height: 2px;
+    margin-bottom: 5px;
+}
+
 
 /************************* End Navbar *************************/
 
 
 
-/************************* Aside styling *************************/
+/************************* Left aside styling *************************/
 
 .aside{
     grid-area: aside;
@@ -99,7 +130,6 @@ body{
 .aside__image{
     border-radius: 100%;
     transition: box-shadow .5s, transform .5s;
-    width: 100px;
 }
 
 .aside__image:hover,
@@ -108,14 +138,72 @@ body{
     transform: scale(1.05);
 }
 
-/************************* End aside styling *************************/
+/************************* End left aside styling *************************/
+
+
+
+/************************* Right Aside styling *************************/
+
+.facts{
+    display: flex;
+    flex-direction: column;
+    font-family: DancingScript;
+    grid-area: fact;
+    justify-self: center;
+}
+
+.fact{
+    background-color: #fff;
+    box-shadow: 0px 0px 20px 0 rgba(120, 120, 120, .1);
+    margin-bottom: 1.5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    padding: 1rem;
+    width: 90%;
+}
+
+.fact__header{
+    margin-bottom: 1rem;
+}
+
+.fact__title{
+    text-align: center;
+}
+
+.fact__body{
+    margin-bottom: .75rem;
+}
+
+.fact__actions{
+    text-align:center;
+}
+
+.fact__btn{
+    background: transparent;
+    border: 1px solid var(--main-color);
+    color: var(--main-color);
+    cursor: pointer;
+    display: inline-block;
+    letter-spacing: 1px;
+    padding: .25rem 1rem;
+    text-decoration: none;
+    transition: background-color .5s,color .4s;
+}
+
+.fact__btn:hover,
+.fact__btn:focus{
+    background-color: var(--main-color);
+    color: #fff;
+}
+
+/************************* End right aside styling *************************/
 
 
 
 /************************* Footer styling *************************/
 
 .footer{
-    background-color: #1c1e21;
+    background-color: var(--main-color);
     grid-area: footer;
     padding: 1.5rem 0;
 }
@@ -125,7 +213,6 @@ body{
     font-size: .8rem;
     letter-spacing: 2px;
     margin:0 auto;
-    max-width: 1400px;
     text-align: center;
     width: 90%;
 }
@@ -138,72 +225,105 @@ body{
 
 @media screen and ( min-width: 480px ){
 
-    .nav{
-        align-items: center;
-         display: flex;
-         justify-content: space-between;
-    }
-
-    .nav__list{
-        width: 60%;
-    }
-
-    .nav__logo{
-        margin-bottom: 0;
-    }
-
     .aside__image{
         border-radius: 100%;
         transition: box-shadow .5s, transform .5s;
-        width: 120px;
     }
+
+    .facts{
+        flex-direction: row;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+
 } 
 
-@media  screen and ( min-width: 1020px ) {
+@media screen and ( min-width: 720px ){
+
+    .nav{
+        align-items: center;
+        display: flex;
+        justify-content: space-between;
+        padding: 1.5rem 0 1.5rem 0;
+    }
+
+    .nav__burger{
+        display: none;
+    }
+
+    .nav__list{
+        display: flex;
+        justify-content: space-between;
+        height: auto;
+        overflow-y: visible;
+        padding-top: 0;
+        transition:none;
+        width: 50%;
+    }
+
+    .nav__item {
+        height: auto;
+        padding: 0;
+    }
+
+}
+
+@media  screen and ( min-width: 820px ) {
+
     body{
         color: #333;
         grid-template:
         "nav nav" auto
         "aside main" auto
-        "footer footer" auto / minmax(20%,250px) 1fr;
+        "fact fact" auto
+        "footer footer" auto / 1fr 5fr;
         display: grid;
         font-family: Roboto;
-        min-height: 100vh;
     }
 
     .nav__list{
         width: 40%;
     }
 
-    .aside{
-        grid-area: aside;
-        margin: 0 auto;
-        margin-bottom: 2rem;
-        width: 90%;
-    }
-    
     .aside__list{
-        display: flex;
         flex-direction: column;
-        list-style-type:none;
         position: sticky;
         top:1rem;
     }
 
-    .aside__image{
-        border-radius: 100%;
-        transition: box-shadow .5s, transform .5s;
-        width: 100px;
+    .fact{
+        width: 25%;
     }
 
 }
 
 @media screen and ( min-width:1580px ) {
+
+    body{
+        color: #333;
+        grid-template:
+        "nav nav nav" auto
+        "aside main fact" 1fr
+        "footer footer footer" auto / 1fr 4fr 1fr;
+        display: grid;
+        font-family: Roboto;
+    }
+
     .aside__image{
         border-radius: 100%;
         transition: box-shadow .5s, transform .5s;
-        width: 130px;
     }
+
+    .fact{
+        width: 90%;
+    }
+
+    .facts{
+        flex-direction: column;
+        justify-content:flex-start;
+        justify-self:center;
+    }
+
 }
 
 /************************* End Media Queries *************************/
