--- a/FrontEnd/pages/LanguagesPage/languages.css
+++ b/FrontEnd/pages/LanguagesPage/languages.css
@@ -3,13 +3,16 @@
 .main{
     grid-area: main;
     justify-self: center;
-    max-width: 1400px;
     width: 90%;
 }
 
 .main__header{
     margin-bottom: 3rem;
     text-align: center;
+}
+
+.main__title{
+    font-size: 2rem;
 }
 
 /************************ End main styling ************************/
@@ -23,11 +26,21 @@
 } 
 
 .card{
-    border-radius: 10px;
+    border-bottom: 6px solid #f16529;
+    border-radius: 10px 10px 10px 10px;
     box-shadow: 0 0 20px 0 rgba(120, 120, 120, .2);
     margin-bottom: 3rem;
     padding: 1rem;
-    max-width: 1150px;
+}
+
+.card:nth-child(3)
+{
+    border-bottom: 6px solid #3c99dc;
+}
+
+.card:nth-child(4)
+{
+    border-bottom: 6px solid #f0db4f;
 }
 
 .card__figure{
@@ -38,10 +51,6 @@
 .main .card:nth-of-type(2) .card__figure{
     margin-bottom: 0;
     margin-top: 1rem;
-}
-
-.card__image{
-    width: 150px;
 }
 
 .card__title{
@@ -60,8 +69,8 @@
 }
 
 .card__more{
-    border: 1px solid #1c1e21;
-    color: #1c1e21;
+    border: 1px solid var(--main-color);
+    color: var(--main-color);
     display: inline-block;
     letter-spacing: 1px;
     padding: .5rem 2rem;
@@ -71,7 +80,7 @@
 
 .card__more:hover,
 .card__more:focus{
-    background-color: #222;
+    background-color: var(--main-color);
     color: #fff;
 }
 
