--- a/eLibrary/views/savedBooks.hbs
+++ b/eLibrary/views/savedBooks.hbs
@@ -7,25 +7,31 @@
     </header>
 
     <section class="saved-books">
-        {{#each works}}
-        <article class="saved-book">
-            <aside class="saved-book__aside">
-                <figure class="saved-book__figure">
-                    <i class="saved-book__icon fas fa-book-open"></i>
-                </figure>
-            </aside>
-            <header class="saved-book__header">
-                <p class="saved-book__title">{{this.title}}</p>
-            </header>
-            <div class="saved-book__body">
-                <p class="saved-book__copy">{{this.author}}</p>
+        {{#if works}}{
+            {{#each works}}
+            <article class="saved-book">
+                <aside class="saved-book__aside">
+                    <figure class="saved-book__figure">
+                        <i class="saved-book__icon fas fa-book-open"></i>
+                    </figure>
+                </aside>
+                <header class="saved-book__header">
+                    <p class="saved-book__title">{{this.title}}</p>
+                </header>
+                <div class="saved-book__body">
+                    <p class="saved-book__copy">{{this.author}}</p>
+                </div>
+                <footer class="saved-book__footer">
+                    <a id="edit" class="saved-book__btn saved-book__btn--yellow" href="/book/{{this.workid}}">Edit</a>
+                    <button id="remove" class="saved-book__btn saved-book__btn--red" data-id={{this.workid}}>Remove</button>
+                </footer>
+            </article>
+            {{/each}}
+        {{else}}
+            <div class="empty">
+                <h1 style="text-align: center;" class="empty__title">You haven't save any book.</h1>
             </div>
-            <footer class="saved-book__footer">
-                <a id="edit" class="saved-book__btn saved-book__btn--yellow" href="/book/{{this.workid}}">Edit</a>
-                <button id="remove" class="saved-book__btn saved-book__btn--red" data-id={{this.workid}}>Remove</button>
-            </footer>
-        </article>
-        {{/each}}
+        {{/if}}
     </section>
 
 </main>
