--- a/eLibrary/public/css/style.css
+++ b/eLibrary/public/css/style.css
@@ -28,7 +28,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-/************************* End Default styling *************************/
+/************************* End default styling *************************/
 
 
 
