--- a/eLibrary/views/layouts/index.hbs
+++ b/eLibrary/views/layouts/index.hbs
@@ -21,6 +21,8 @@
     <script src="../../JavaScript/script.js" defer></script>
     <!-- Font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <!-- Handlebars -->
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     
 </head>
 <body>
