--- a/eLibrary/views/search.hbs
+++ b/eLibrary/views/search.hbs
@@ -6,7 +6,7 @@
     </header>
     <form action="./books" method="GET" class="form">
         <div class="input-group">
-            <label for="search" class="input-group__label">Favourite book or artist:</label>
+            <label for="search" class="input-group__label">Favourite book or author:</label>
             <input type="text" name="keyword" class="input-group__input" id="search" placeholder="Love" required>
         </div><div class="form__actions">
             <button type="submit" class="form__btn"><i class="form__icon fas fa-search"></i></button>
